<resources>
    <string name="_0">0</string>
    <string name="_import">Import</string>
    <string name="about_chartmaker">About ChartMaker</string>
    <string name="add_a_slice">Add a slice</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="app_name">ChartMaker</string>
    <string name="arrow_pointing_to_button">Arrow pointing to button</string>
    <string name="ascending">Ascending</string>
    <string name="back">Back</string>
    <string name="chart">chart</string>
    <string name="clear_formatting">Clear formatting</string>
    <string name="collaboration">Collaboration</string>
    <string name="colon_symbol">:</string>
    <string name="color_pointer">Color pointer</string>
    <string name="comma_symbol">,</string>
    <string name="could_not_find_app_to_send_the_email_with">Could not find app to send the email with</string>
    <string name="csv">CSV</string>
    <string name="date_modified">Date modified</string>
    <string name="decrement_slice_spacing">Decrement slice spacing</string>
    <string name="delete">Delete</string>
    <string name="delimiter">Delimiter</string>
    <string name="descending">Descending</string>
    <string name="description">Description</string>
    <string name="dismiss">Dismiss</string>
    <string name="dollar_symbol">$</string>
    <string name="done">Done</string>
    <string name="donut_radius">Donut radius</string>
    <string name="edit">Edit</string>
    <string name="empty_chart">Empty chart</string>
    <string name="entries">Entries</string>
    <string name="entry_color">Entry color</string>
    <string name="entry_has_been_modified_or_deleted">Entry has been modified or deleted!</string>
    <string name="expand_and_collapse">Expand and collapse</string>
    <string name="export">Export</string>
    <string name="export_as">Export as</string>
    <string name="export_completed">Export completed</string>
    <string name="exporting_files_x_x" formatted="true">Exporting files %1$d/%2$d</string>
    <string name="exporting_files_x_x_x_failed" formatted="true">Exporting files %1$d/%2$d, %3$d failed</string>
    <string name="failed_to_load_chart">Failed to load chart</string>
    <string name="failed_to_save_screenshot">Failed to save screenshot</string>
    <string name="format_bold">Format bold</string>
    <string name="format_italic">Format italic</string>
    <string name="general">General</string>
    <string name="google_play_icon">Google Play icon</string>
    <string name="import_completed">Import completed</string>
    <string name="importing_files_x_x" formatted="true">Importing files %1$d/%2$d</string>
    <string name="importing_files_x_x_x_failed" formatted="true">Importing files %1$d/%2$d, %3$d failed</string>
    <string name="increment_slice_spacing">Increment_slice_spacing</string>
    <string name="is_checked">Is checked</string>
    <string name="labels">Labels</string>
    <string name="legend">Legend</string>
    <string name="let_s_add_data">Let\'s add data</string>
    <string name="let_s_make_one">Let\'s make one!</string>
    <string name="maximum_value_reached">Maximum value reached</string>
    <string name="minimum_value_reached">Minimum value reached</string>
    <string name="no_data_2_lines">No\ndata</string>
    <string name="no_description">No description</string>
    <string name="no_label">No label</string>
    <string name="number_symbol">#</string>
    <string name="option_icon">Option icon</string>
    <string name="percentage_symbol">%</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="please_enable_storage_permission">Please enable storage permission</string>
    <string name="please_enter_your_feedback">Please enter your feedback</string>
    <string name="properties">Properties</string>
    <string name="rate_1_star">Rate 1 star</string>
    <string name="rate_2_stars">Rate 2 stars</string>
    <string name="rate_3_stars">Rate 3 stars</string>
    <string name="rate_4_stars">Rate 4 stars</string>
    <string name="rate_5_stars">Rate 5 stars</string>
    <string name="rate_on">Rate on</string>
    <string name="reorder">Reorder</string>
    <string name="save">Save</string>
    <string name="saved_to">Saved to</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshot_saved">Screenshot saved</string>
    <string name="semicolon_symbol">;</string>
    <string name="send_feedback">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="show">Show</string>
    <string name="show_description_in_center">Show description in center</string>
    <string name="slice_deleted">Slice deleted</string>
    <string name="slice_space">Slice space</string>
    <string name="sort">Sort</string>
    <string name="sort_on_date_modified_ascending">sort_on_date_modified_ascending</string>
    <string name="sort_on_date_modified_descending">sort_on_date_modified_descending</string>
    <string name="sort_on_description_ascending">sort_on_description_ascending</string>
    <string name="sort_on_description_descending">sort_on_description_descending</string>
    <string name="space">space</string>
    <string name="tab">tab</string>
    <string name="take_screenshot">Take screenshot</string>
    <string name="text_color">Text color</string>
    <string name="toggleFullscreen">Toggle fullscreen</string>
    <string name="tsv">TSV</string>
    <string name="undo">Undo</string>
    <string name="values">Values</string>
    <string name="version" formatted="true">%s (build %d)</string>
    <string name="visible_hidden">Visible hidden</string>
    <string name="what_type_of_chart_xxx_to_create">What type of chart would\nyou like to create?</string>
    <string name="you_don_t_have_any_charts">You don\'t have any charts</string>
    <string name="your_chart_is_empty">Your chart is empty</string>

    <string-array name="decimals">
        <item>No decimals</item>
        <item>1 Decimal</item>
        <item>2 Decimals</item>
        <item>3 Decimals</item>
    </string-array>

    <plurals name="x_charts_deleted">
        <item quantity="one">%d Chart deleted</item>
        <item quantity="other">%d Charts deleted</item>
    </plurals>
</resources>
