<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2020 Bram Stoker. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="8dp"
        android:text="@string/delimiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/comma"
        style="@style/ToggleButton.Medium"
        android:text="@string/comma_symbol"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/semicolon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <android.widget.Button
        android:id="@+id/semicolon"
        style="@style/ToggleButton.Medium"
        android:text="@string/semicolon_symbol"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/colon"
        app:layout_constraintStart_toEndOf="@+id/comma"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <android.widget.Button
        android:id="@+id/colon"
        style="@style/ToggleButton.Medium"
        android:text="@string/colon_symbol"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toEndOf="@+id/semicolon"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <android.widget.Button
        android:id="@+id/space"
        style="@style/ToggleButton.Medium"
        android:text="@string/space"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/tab"
        app:layout_constraintStart_toEndOf="@+id/colon"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <android.widget.Button
        android:id="@+id/tab"
        style="@style/ToggleButton.Medium"
        android:text="@string/tab"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/save"
        style="@style/ImageButton.Large"
        android:background="@drawable/color_dialog_done_background"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>