<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rate_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/feedback_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/star1"
            style="@style/ImageButton.Medium"
            android:clickable="false"
            android:contentDescription="@string/rate_1_star"
            android:src="@drawable/ic_star_border" />

        <ImageView
            android:id="@+id/star2"
            style="@style/ImageButton.Medium"
            android:clickable="false"
            android:contentDescription="@string/rate_2_stars"
            android:src="@drawable/ic_star_border" />

        <ImageView
            android:id="@+id/star3"
            style="@style/ImageButton.Medium"
            android:clickable="false"
            android:contentDescription="@string/rate_3_stars"
            android:src="@drawable/ic_star_border" />

        <ImageView
            android:id="@+id/star4"
            style="@style/ImageButton.Medium"
            android:clickable="false"
            android:contentDescription="@string/rate_4_stars"
            android:src="@drawable/ic_star_border" />

        <ImageView
            android:id="@+id/star5"
            style="@style/ImageButton.Medium"
            android:clickable="false"
            android:contentDescription="@string/rate_5_stars"
            android:src="@drawable/ic_star_border" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="215"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate_app">

        <EditText
            android:id="@+id/feedback_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:gravity="start|top"
            android:hint="@string/please_enter_your_feedback"
            android:inputType="textNoSuggestions|textMultiLine"
            android:lines="7"
            android:maxLength="215" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/rate_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="@string/rate_on"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/google_play_icon"
        app:layout_constraintEnd_toStartOf="@+id/send_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/google_play_icon"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/google_play_icon"
        android:layout_width="44dp"
        android:layout_height="64dp"
        android:contentDescription="@string/google_play_icon"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:src="@drawable/ic_google_play"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rate_button"
        app:layout_constraintTop_toBottomOf="@+id/feedback_text_input_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/send_button"
        style="@style/ImageButton.Large"
        android:contentDescription="@string/send_feedback"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>