<?xml version="1.0" encoding="utf-8"?>
<com.stokerapps.chartmaker.ui.piechart.properties.LabelPropertiesView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/switch_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/expand"
        style="@style/ImageButton.Medium"
        android:contentDescription="@string/expand_and_collapse"
        android:src="@drawable/ic_expand"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintEnd_toStartOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/labels"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintEnd_toStartOf="@+id/visible"
        app:layout_constraintStart_toEndOf="@+id/expand"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/visible"
        style="@style/ImageButton.Medium"
        android:contentDescription="@string/visible_hidden"
        android:src="@drawable/ic_visibility"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand">

        <View
            android:id="@+id/separator2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?attr/colorBackground"
            app:layout_constraintBottom_toTopOf="@id/font_family"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/font_family"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/format_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator2" />

        <ImageButton
            android:id="@+id/format_bold"
            style="@style/ToggleButton.Medium"
            android:contentDescription="@string/format_bold"
            android:padding="0dp"
            android:src="@drawable/ic_format_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/format_italic"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/font_family" />

        <ImageButton
            android:id="@+id/format_italic"
            style="@style/ToggleButton.Medium"
            android:contentDescription="@string/format_italic"
            android:padding="0dp"
            android:src="@drawable/ic_format_italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/font_size"
            app:layout_constraintStart_toEndOf="@+id/format_bold"
            app:layout_constraintTop_toBottomOf="@id/font_family" />

        <Spinner
            android:id="@+id/font_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/color"
            app:layout_constraintStart_toEndOf="@+id/format_italic"
            app:layout_constraintTop_toBottomOf="@id/font_family" />

        <com.stokerapps.chartmaker.ui.common.ColorButton
            android:id="@+id/color"
            style="@style/ColorButton.Medium"
            android:contentDescription="@string/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/format_clear"
            app:layout_constraintStart_toEndOf="@+id/font_size"
            app:layout_constraintTop_toBottomOf="@id/font_family" />

        <ImageButton
            android:id="@+id/format_clear"
            style="@style/ImageButton.Medium"
            android:contentDescription="@string/clear_formatting"
            android:src="@drawable/ic_format_clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/color"
            app:layout_constraintTop_toBottomOf="@id/font_family" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.stokerapps.chartmaker.ui.piechart.properties.LabelPropertiesView>