<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/item_selectable_surface"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/reorder"
        style="@style/ImageButton.Medium"
        android:contentDescription="@string/reorder"
        android:src="@drawable/ic_reorder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.stokerapps.chartmaker.ui.common.ColorButton
        android:id="@+id/color"
        style="@style/ColorButton.Medium"
        android:contentDescription="@string/entry_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/label"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/reorder"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/no_label"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:lines="1"
        android:nextFocusForward="@+id/value"
        android:paddingStart="2dp"
        android:paddingTop="12dp"
        android:paddingEnd="2dp"
        android:paddingBottom="12dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/color"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Value 1" />

    <EditText
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/_0"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:lines="1"
        android:paddingStart="2dp"
        android:paddingTop="12dp"
        android:paddingEnd="2dp"
        android:paddingBottom="12dp"
        android:selectAllOnFocus="true"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="100" />

    <ImageButton
        android:id="@+id/delete"
        style="@style/ImageButton.Medium"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/value"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

</androidx.constraintlayout.widget.ConstraintLayout>
