<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.stokerapps.chartmaker.ui.common.ColorButton
        android:id="@+id/color"
        style="@style/ColorButton.Large"
        android:contentDescription="@string/entry_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/label"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:gravity="center"
        android:hint="@string/_0"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:lines="1"
        android:nextFocusForward="@+id/label"
        android:paddingTop="8dp"
        android:paddingBottom="2dp"
        android:selectAllOnFocus="true"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toTopOf="@+id/label"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintStart_toEndOf="@id/color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="100" />

    <EditText
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:gravity="center"
        android:hint="@string/no_label"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:lines="1"
        android:paddingTop="2dp"
        android:paddingBottom="8dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintStart_toEndOf="@id/color"
        app:layout_constraintTop_toBottomOf="@id/value"
        tools:text="Value 1" />

    <ImageButton
        android:id="@+id/done"
        style="@style/ImageButton.Large"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/value"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>